tests/ui/rename/rename_garbage.stderr
error: unknown field `garbage`
 --> $DIR/rename_garbage.rs:5:24
  |
5 |     #[shorthand(rename(garbage = ""))]
  |                        ^^^^^^^
